# CSC133-ModSim

./: .gitignore  pyproject.toml
model/: xgboost_scheduler_model.pkl
notebooks/: 1-DataCleaning.ipynb  2-DataPreprocessing.ipynb  3-ModelTraining.ipynb  4-SHAPAnalysis.ipynb  5-WorkloadGeneration.ipynb  6-HPCSimulation.ipynb  7-Visualization.ipynb
result/: final_monte_carlo_results.csv
