[project]
name = "csc133-modsim"
version = "0.1.0"
description = ""
authors = [
    {name = "Ordinary33",email = "husnie.baddie@g.msuiit.edu.ph"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.51.0,<0.52.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "simpy (>=4.1.1,<5.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "fastparquet (>=2026.5.0,<2027.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
